CHANGES
=======

1.21.1 (unreleased)
-------------------

- Nothing changed yet.


1.21.0 (2010-07-06)
-------------------

- Set the UUID via a custom header on PUT (#7366).

- MOVE is now doing a MOVE instead of COPY+DELETE (#7440)


1.20.1 (2010-06-09)
-------------------

- Rename supports renaming to ids with non-us-ascii chars (#7405)
- Correctly escape # in ids (#6042).
- Using versions from the ZTK.


1.20.0 (2010-01-18)
-------------------

- Do not sweep cache automatically. This should be done via a cronjob.


1.19.3 (2009-10-08)
-------------------

- Don't raise a PreconditionFailedError when the body of the stored resource 
  matches the to-be-written body. This is to support ZODB conflict errors
  without DAV having transactions.

- Fixed level 3 tests.


1.19.2 (2009-09-29)
-------------------

- Mock connector behaves more like the real one in regard to conflicts and
  etag preconditions.


1.19.1 (2009-09-28)
-------------------

- Removed a savepoint to avoid garbage collection which lead to LockingErrors.
  Note that this probably is a ZODB bug we're working around here.


1.19 (2009-09-24)
-----------------

- Honour the ETAG for PUT requests so there is a way to detect conflicts.

- Refactored DAV exceptions and exception handling to get this mor straight.

- Autolocks when adding content are immeadeately removed when there was an
  error during PUT or PROPPATCH.

1.18.4 (2009-09-21)
-------------------

- PROPPATCH on a locked resource raises correct DAVLockedError (#6237).


1.18.3 (2009-09-06)
-------------------

- Fixed test as content changes.


1.18.2 (2009-09-01)
-------------------

- Fixed Property conflict resolution with ZODB 3.9.0c


1.18.1 (2009-08-18)
-------------------

- Python 2.6 compatibility.

1.18 (2009-08-14)
-----------------

- There was a chance that cache inconsitencies could yield a KeyError: "The
  resource xzy does not exist." (#5993).

1.17.1 (2009-08-05)
-------------------
