@@ -49,30 +49,24 @@ header: Content-Type: text/xml; charset="utf-8"
 
 
 So apparently we may only wait 15 seconds before the connection will time out.
-In this case we will silently reconnect. The first HEAD request does not reach
-the server, then the reconnect happens and the HEAD request is sent again:
+In this case we will silently reconnect. The first request does not reach the
+server(hence the "reply: ''"), then the reconnect happens and the request is
+sent again:
 
 >>> import time
 >>> time.sleep(16)
 >>> connector._invalidate_cache('http://xml.zeit.de/testing/')
-send: 'HEAD /cms/work/testing HTTP/1.1\r\nAccept-Encoding: identity\r\nHost: <DAVHOST>:<DAVPORT>\r\nConnection: keep-alive\r\nUser-Agent: zeit.connector\r\n\r\n'
+send: 'PROPFIND /cms/work/testing/ HTTP/1.1\r\nAccept-Encoding: identity\r\nContent-Length: 99\r\nDepth: 1\r\nConnection: keep-alive\r\nContent-Type: text/xml; charset="utf-8"\r\nHost: ...\r\nUser-Agent: zeit.connector\r\n\r\n'
+send: '<?xml version=\'1.0\' encoding=\'UTF-8\'?>\n<ns0:propfind xmlns:ns0="DAV:"><ns0:allprop/></ns0:propfind>'
 reply: ''
-send: 'HEAD /cms/work/testing HTTP/1.1\r\nAccept-Encoding: identity\r\nHost: <DAVHOST>:<DAVPORT>\r\nConnection: keep-alive\r\nUser-Agent: zeit.connector\r\n\r\n'
-reply: 'HTTP/1.1 301 Moved Permanently\r\n'
-header: Date: ...
-header: Server: ...
-header: Location: http://<DAVHOST>:<DAVPORT>/cms/work/testing/
-header: Keep-Alive: timeout=15, max=...
-header: Connection: Keep-Alive
-header: Content-Type: text/html; charset=iso-8859-1
-send: 'PROPFIND /cms/work/testing/ HTTP/1.1\r\nAccept-Encoding: identity\r\nContent-Length: 99\r\nDepth: 1\r\nConnection: keep-alive\r\nContent-Type: text/xml; charset="utf-8"\r\nHost: <DAVHOST>:<DAVPORT>\r\nUser-Agent: zeit.connector\r\n\r\n'
+send: 'PROPFIND /cms/work/testing/ HTTP/1.1\r\nAccept-Encoding: identity\r\nContent-Length: 99\r\nDepth: 1\r\nConnection: keep-alive\r\nContent-Type: text/xml; charset="utf-8"\r\nHost: ...\r\nUser-Agent: zeit.connector\r\n\r\n'
 send: '<?xml version=\'1.0\' encoding=\'UTF-8\'?>\n<ns0:propfind xmlns:ns0="DAV:"><ns0:allprop/></ns0:propfind>'
 reply: 'HTTP/1.1 207 Multi-Status\r\n'
 header: Date: ...
-header: Server: ...
-...
-header: Content-Length: ...
-header: Keep-Alive: timeout=15, max=...
+header: Server: Apache/2.2.8 (Ubuntu) DAV/2 ZeitCMS/0.2d-bugfix (Version: exported)
+header: MS-Author-Via: DAV
+header: Content-Length: 914
+header: Keep-Alive: timeout=15, max=100
 header: Connection: Keep-Alive
 header: Content-Type: text/xml; charset="utf-8"
 >>> list(connector.listCollection('http://xml.zeit.de/testing/'))
