@@ -5,7 +5,7 @@
 
 from zeit.connector.interfaces import UUID_PROPERTY
 import StringIO
-import zeit.connector.resource
+import transaction
 import zeit.connector.testing
 
 
@@ -16,6 +16,7 @@ class TestUnicode(zeit.connector.testing.ConnectorTest):
             u'http://xml.zeit.de/online/2007/09/laktose-milchzucker-gewöhnung']
 
     def test_create_and_list(self):
+        import zeit.connector.resource
         rid = u'http://xml.zeit.de/testing/ünicöde'
         self.connector[rid] = zeit.connector.resource.Resource(
             rid, None, 'text',
@@ -26,6 +27,7 @@ class TestUnicode(zeit.connector.testing.ConnectorTest):
             list(self.connector.listCollection('http://xml.zeit.de/testing/')))
 
     def test_overwrite(self):
+        import zeit.connector.resource
         rid = u'http://xml.zeit.de/testing/ünicöde'
         self.connector[rid] = zeit.connector.resource.Resource(
             rid, None, 'text',
@@ -38,6 +40,7 @@ class TestUnicode(zeit.connector.testing.ConnectorTest):
         self.assertEquals('Paff', self.connector[rid].data.read())
 
     def test_copy(self):
+        import zeit.connector.resource
         rid = u'http://xml.zeit.de/testing/ünicöde'
         new_rid = rid + u'-copied'
         self.connector[rid] = zeit.connector.resource.Resource(
@@ -49,6 +52,7 @@ class TestUnicode(zeit.connector.testing.ConnectorTest):
         self.assertEquals('Pop.', resource.data.read())
 
     def test_move(self):
+        import zeit.connector.resource
         rid = u'http://xml.zeit.de/testing/ünicöde'
         new_rid = rid + u'-renamed'
         self.connector[rid] = zeit.connector.resource.Resource(
@@ -63,6 +67,7 @@ class TestUnicode(zeit.connector.testing.ConnectorTest):
 class TestEscaping(zeit.connector.testing.ConnectorTest):
 
     def test_hash(self):
+        import zeit.connector.resource
         rid = 'http://xml.zeit.de/testing/foo#bar'
         self.connector[rid] = zeit.connector.resource.Resource(
             rid, None, 'text',
@@ -132,6 +137,7 @@ class TestConflictDetectionMock(
 class TestResource(zeit.connector.testing.ConnectorTest):
 
     def test_properties_should_be_current(self):
+        import zeit.connector.resource
         rid = u'http://xml.zeit.de/testing/aresource'
         self.connector[rid] = zeit.connector.resource.Resource(
             rid, None, 'text',
@@ -143,3 +149,101 @@ class TestResource(zeit.connector.testing.ConnectorTest):
         self.connector.changeProperties(
             rid, {('foo', 'bar'): 'changed'})
         self.assertEquals('changed', res.properties[('foo', 'bar')])
+
+
+class TestConnectorCache(zeit.connector.testing.ConnectorTest):
+
+    rid = 'http://xml.zeit.de/testing/cache_test'
+
+    def setUp(self):
+        import zeit.connector.resource
+        super(TestConnectorCache, self).setUp()
+        self.connector[self.rid] = zeit.connector.resource.Resource(
+            self.rid, None, 'text',
+            StringIO.StringIO('Pop.'),
+            contentType='text/plain')
+        list(self.connector.listCollection('http://xml.zeit.de/testing/'))
+
+    def test_deleting_non_existing_resource_does_not_create_cache_entry(self):
+        children = self.connector.child_name_cache[
+            'http://xml.zeit.de/testing/']
+        children.remove(self.rid)
+        del self.connector[self.rid]
+        self.assertEqual([], list(children))
+        self.assertEqual(None, self.connector.property_cache.get(self.rid))
+
+    def test_delete_updates_cache(self):
+        del self.connector[self.rid]
+        children = self.connector.child_name_cache[
+            'http://xml.zeit.de/testing/']
+        self.assertEquals([], list(children))
+
+    def test_cache_time_is_not_stored_on_dav(self):
+        key = ('cached-time', 'INTERNAL')
+        properties = self.connector[self.rid].properties
+        cache_time = properties[key]
+        self.connector.changeProperties(self.rid, {key: 'foo'})
+        properties = self.connector[self.rid].properties
+        self.assertNotEqual('foo', properties[key])
+        davres = self.connector._get_dav_resource(self.rid)
+        davres.update()
+        self.assertTrue(key not in davres.get_all_properties())
+        properties = self.connector[self.rid].properties
+        self.assertEqual(cache_time, properties[key])
+
+    def test_cache_time_is_not_stored_on_dav_with_add(self):
+        key = ('cached-time', 'INTERNAL')
+        self.connector.add(self.connector[self.rid])
+        davres = self.connector._get_dav_resource(self.rid)
+        davres.update()
+        self.assertTrue(key not in davres.get_all_properties())
+
+    def test_cache_handles_webdav_keys(self):
+        key = zeit.connector.cache.WebDAVPropertyKey(('foo', 'bar'))
+        self.connector.changeProperties(self.rid, {key: 'baz'})
+
+    def test_cache_handles_security_proxied_webdav_keys(self):
+        import zope.security.proxy
+        key = zeit.connector.cache.WebDAVPropertyKey(('foo', 'bar'))
+        key = zope.security.proxy.ProxyFactory(key)
+        self.connector.changeProperties(self.rid, {key: 'baz'})
+
+    def test_cache_does_not_store_security_proxied_webdav_keys(self):
+        import zope.security.proxy
+        key = zeit.connector.cache.WebDAVPropertyKey(('foo', 'bar'))
+        key = zope.security.proxy.ProxyFactory(key)
+        self.connector.property_cache['id'] = {key: 'baz'}
+        self.assertTrue(isinstance(
+            self.connector.property_cache['id'].keys()[0],
+            zeit.connector.cache.WebDAVPropertyKey))
+
+    def test_inconsistent_child_names_do_not_yields_non_existing_objects(self):
+        self.assertEquals(
+            [(u'cache_test', u'http://xml.zeit.de/testing/cache_test')],
+            list(self.connector.listCollection('http://xml.zeit.de/testing/')))
+        cache = self.connector.child_name_cache['http://xml.zeit.de/testing/']
+        self.assertEquals(
+            [u'http://xml.zeit.de/testing/cache_test'],
+            list(cache))
+        cache.add('http://xml.zeit.de/testing/cache_test_2')
+        self.assertEquals(
+            [(u'cache_test', u'http://xml.zeit.de/testing/cache_test')],
+            list(self.connector.listCollection('http://xml.zeit.de/testing/')))
+
+    def test_no_changes_should_not_cause_write(self):
+        # Assign caches to DB to be able to detect changes.
+        self.getRootFolder().property_cache = self.connector.property_cache
+        self.getRootFolder().child_cache = self.connector.child_name_cache
+        transaction.commit()
+
+        jar = self.connector.property_cache._p_jar
+        r = self.get_resource('res', 'Pop goes the weasel.')
+        self.connector.add(r)
+        list(self.connector.listCollection('http://xml.zeit.de/testing/'))
+        # Two changes: property cache and child chache
+        self.assertTrue(jar._registered_objects)
+        transaction.commit()
+        # No changes.
+        self.assertEqual([], jar._registered_objects)
+        self.connector.invalidate_cache(r.id)
+        self.assertEqual([], jar._registered_objects)
